TEST_PROGRAMS/INVALID/teng_long/bad_3.min
# ';' after while

while x do
  x = x - 1;
done;

